Levels polygons colors linked to data