@@ -45,7 +45,7 @@ public class LevelsMenu extends JFrame{
     Color darkGray = new Color(148,148,148);
 
     static Color darkGreen = new Color(23, 63, 31);
-    Color darkRed = new Color(190,5,5);
+    
 
     boolean[] levelsUnlockedEasy = new boolean[5];
     boolean[] levelsUnlockedHard = new boolean[5];
@@ -55,6 +55,7 @@ public class LevelsMenu extends JFrame{
     Color lightGreen = new Color(68,198,98);
     Color lightlightRed = new Color(221,54,73);
     Color lightRed = new Color(201,24,43);
+    Color darkRed = new Color(132,16,28);
 
     Color redStroke = new Color(156,0,0);
     Color greenStroke = new Color(27,116,47);
@@ -115,50 +116,155 @@ public class LevelsMenu extends JFrame{
                 
         };
 
-        Polygon polygon0 = new Polygon(0,0, lightGreen, lightlightGreen,
+        Color polygonColor ;
+        Color polygonColorLighter;
+        String colorOverlay;
+        PlayerData playerData = null;
+        Color stroke;
+        try {
+            playerData = DataManager.loadPlayerData(); 
+        } catch (Exception e) {}
+
+
+        if(playerData.isLevelCompleted(new LevelIdentifier(playMode, 0))){
+            polygonColor = lightGreen;
+            polygonColorLighter = lightlightGreen;
+            colorOverlay = "Green";
+            stroke = greenStroke;
+        }
+        else if(playerData.isLevelUnlocked(new LevelIdentifier(playMode, 0))){
+            polygonColor = lightRed;
+            polygonColorLighter = lightlightRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        else{
+            polygonColor = darkRed;
+            polygonColorLighter = darkRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        Polygon polygon0 = new Polygon(0,0, polygonColor, polygonColorLighter,
                             new int[]{570,800,800,620,635,600,580,570,595,590,560,555,580},
                             new int[]{0,0,    350,370,325,290,290,260,210,140,130,85,70},
                             true,
-                            greenStroke,
-                            greenStroke,
+                            stroke,
+                            stroke,
                             0,
-                            "Green"
+                            colorOverlay
         );
-        Polygon polygon1 = new Polygon(0,0, lightGreen, lightlightGreen,
+
+        if(playerData.isLevelCompleted(new LevelIdentifier(playMode, 1))){
+            polygonColor = lightGreen;
+            polygonColorLighter = lightlightGreen;
+            colorOverlay = "Green";
+            stroke = greenStroke;
+        }
+        else if(playerData.isLevelUnlocked(new LevelIdentifier(playMode, 1))){
+            polygonColor = lightRed;
+            polygonColorLighter = lightlightRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        else{
+            polygonColor = darkRed;
+            polygonColorLighter = darkRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        Polygon polygon1 = new Polygon(0,0, polygonColor, polygonColorLighter,
                             new int[]{0,570,580,555,560, 590, 595,570,580,600,635,620,490,410,382,350,385,345,300,290,260,240,270,245,125,140,75,30},
                             new int[]{0, 0, 70,  85,130,  140,210,260,290,290,325,370,425,420,455,445,415,310,300,200,190,170,155,115, 85,50, 20,35},
                             true,
-                            greenStroke,
-                            greenStroke,
+                            stroke,
+                            stroke,
                             1,
-                            "Green"
+                            colorOverlay
         );
-        Polygon polygon2 = new Polygon(0,0, lightRed, lightlightRed,
+
+        if(playerData.isLevelCompleted(new LevelIdentifier(playMode, 2))){
+            polygonColor = lightGreen;
+            polygonColorLighter = lightlightGreen;
+            colorOverlay = "Green";
+            stroke = greenStroke;
+        }
+        else if(playerData.isLevelUnlocked(new LevelIdentifier(playMode, 2))){
+            polygonColor = lightRed;
+            polygonColorLighter = lightlightRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        else{
+            polygonColor = darkRed;
+            polygonColorLighter = darkRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        Polygon polygon2 = new Polygon(0,0, polygonColor, polygonColorLighter,
                             new int[]{0,0,  30,75,140,125,245,270,240,260,290,300,345,385,350,382,410,490,470,370,380,365,345,350,305,310,270,220,170,150,110,115,73,70},
                             new int[]{450,0,35,20,50,  85,115,155,170,190,200,300,310,415,445,455,420,425,520,530,555,570,560,530,525,495,490,525,515,535,535,500,500,460},
                             true,
-                            redStroke,
-                            redStroke,
+                            stroke,
+                            stroke,
                             2,
-                            "Red"
+                            colorOverlay
         );
-        Polygon polygon3 = new Polygon(0,0, lightRed, lightlightRed,
+
+        if(playerData.isLevelCompleted(new LevelIdentifier(playMode, 3))){
+            polygonColor = lightGreen;
+            polygonColorLighter = lightlightGreen;
+            colorOverlay = "Green";
+            stroke = greenStroke;
+        }
+        else if(playerData.isLevelUnlocked(new LevelIdentifier(playMode, 3))){
+            polygonColor = lightRed;
+            polygonColorLighter = lightlightRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        else{
+            polygonColor = darkRed;
+            polygonColorLighter = darkRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        Polygon polygon3 = new Polygon(0,0, polygonColor, polygonColorLighter,
                             new int[]{0,0,     70, 73,115, 110,150,170,220,270, 310,305,350,345,365,380, 370,470,440,373,370,330,320,330,310,340,380,395,425,435},
                             new int[]{900,450,460,500,500, 535,535,515,525,490, 495,525,530,560,570,555, 530,520,680,690,710,720,760,800,820,850,825,840,840,895},
                             true,
-                            redStroke,
-                            redStroke,
+                            stroke,
+                            stroke,
                             3,
-                            "Red"
+                            colorOverlay
         );
-        Polygon polygon4 = new Polygon(0,0, lightRed, lightlightRed,
+
+        if(playerData.isLevelCompleted(new LevelIdentifier(playMode, 4))){
+            polygonColor = lightGreen;
+            polygonColorLighter = lightlightGreen;
+            colorOverlay = "Green";
+            stroke = greenStroke;
+        }
+        else if(playerData.isLevelUnlocked(new LevelIdentifier(playMode, 4))){
+            polygonColor = lightRed;
+            polygonColorLighter = lightlightRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+        else{
+            polygonColor = darkRed;
+            polygonColorLighter = darkRed;
+            colorOverlay = "Red";
+            stroke = redStroke;
+        }
+
+        Polygon polygon4 = new Polygon(0,0, polygonColor, polygonColorLighter,
                             new int[]{440,425,395,380,340,310,330,320,330,370,373},
                             new int[]{680,840,840,825,850,820,800,760,720,710,690},
                             true,
-                            redStroke,
-                            redStroke,
+                            stroke,
+                            stroke,
                             4,
-                            "Red"
+                            colorOverlay
         );
 
 
@@ -169,11 +275,11 @@ public class LevelsMenu extends JFrame{
         UI.PolygonUtilities.polygons[4] = polygon4;
 
 
-        pane.add(polygon0, new Integer(0));
-        pane.add(polygon1, new Integer(1));
-        pane.add(polygon2, new Integer(2));
-        pane.add(polygon3, new Integer(3));
-        pane.add(polygon4 , new Integer(4));
+        pane.add(polygon0, Integer.valueOf(0));
+        pane.add(polygon1, Integer.valueOf(1));
+        pane.add(polygon2, Integer.valueOf(2));
+        pane.add(polygon3, Integer.valueOf(3));
+        pane.add(polygon4 , Integer.valueOf(4));
         
 
         pane.addMouseMotionListener(adapter);
@@ -232,7 +338,7 @@ public class LevelsMenu extends JFrame{
         centerPanel.setLayout(new BoxLayout(centerPanel, BoxLayout.Y_AXIS));
         try {
             centerPanel.add(new JLabel(new ImageIcon(ImageIO.read(new File("resources/images/levelInfo/stars.png")))));
-            ///////
+            ///////TODO
             centerPanel.add(new JLabel(new ImageIcon(ImageIO.read(new File("resources/images/levelInfo/filledStar.png")))));
             //////
             centerPanel.add(new JLabel(new ImageIcon(ImageIO.read(new File("resources/images/levelInfo/obstacles.png")))));
